# defender-for-cloud-apps-api-client

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
defender_cloud_apps/: __init__.py  activities.py  alerts.py  client.py  data_enrichment.py  discovery.py  endpoints.py  entities.py  files.py  filters.py
examples/: README.md  advanced_filtering.py  data_enrichment_management.py  entity_investigation.py  export_activities.py  list_alerts.py  list_discovered_apps.py  monitor_public_files.py
tests/: __init__.py  conftest.py  test_activities.py  test_alerts.py  test_client.py  test_filters.py
